// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[[ AnalyzerHeader ]] renders \`AnalyzerHeader\` with all prop options: {"title":"Python","icon":"python","finishedInDisplay":"41 seconds","status":"CNCL"} 1`] = `
"<div class=\\"flex min-h-24 w-full flex-1 rounded-sm\\">
  <div class=\\"flex w-3/5 flex-col gap-y-3 py-4 md:w-4/5 md:gap-y-2\\">
    <div class=\\"flex items-center space-x-2 text-xs font-normal text-vanilla-400 lg:text-lg lg:leading-9\\">
      <zicon-stub icon=\\"python\\" size=\\"small\\" color=\\"transparent\\"></zicon-stub> <span class=\\"text-base font-bold text-vanilla-100\\">Python</span>
    </div>
    <div class=\\"space-x-6 sm:flex\\">
      <div class=\\"flex items-start space-x-2\\">
        <zicon-stub icon=\\"alert-circle\\" size=\\"small\\" color=\\"honey\\" class=\\"mt-0.5\\"></zicon-stub>
        <div class=\\"text-sm text-vanilla-400\\"><span> Cancelled after 41 seconds </span></div>
      </div>
      <!---->
    </div>
  </div>
  <div class=\\"relative w-2/5 p-3 md:w-1/5\\">
    <div class=\\"flex items-center justify-around gap-x-4\\">
      <div class=\\"flex flex-col items-center\\">
        <div class=\\"text-2xl font-medium text-vanilla-400 v-popper--has-tooltip\\">
          0
        </div>
        <div class=\\"text-xs text-vanilla-400\\">introduced</div>
      </div>
      <div class=\\"flex flex-col items-center\\">
        <div class=\\"text-2xl font-medium text-vanilla-400 v-popper--has-tooltip\\">
          0
        </div>
        <div class=\\"text-xs text-vanilla-400\\">resolved</div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`[[ AnalyzerHeader ]] renders \`AnalyzerHeader\` with all prop options: {"title":"Python","icon":"python","finishedInDisplay":"41 seconds","status":"FAIL"} 1`] = `
"<div class=\\"flex min-h-24 w-full flex-1 rounded-sm\\">
  <div class=\\"flex w-3/5 flex-col gap-y-3 py-4 md:w-4/5 md:gap-y-2\\">
    <div class=\\"flex items-center space-x-2 text-xs font-normal text-vanilla-400 lg:text-lg lg:leading-9\\">
      <zicon-stub icon=\\"python\\" size=\\"small\\" color=\\"transparent\\"></zicon-stub> <span class=\\"text-base font-bold text-vanilla-100\\">Python</span>
    </div>
    <div class=\\"space-x-6 sm:flex\\">
      <div class=\\"flex items-start space-x-2\\">
        <zicon-stub icon=\\"x\\" size=\\"small\\" color=\\"cherry\\" class=\\"mt-0.5\\"></zicon-stub>
        <div class=\\"text-sm text-vanilla-400\\"><span> Failed after 41 seconds </span></div>
      </div>
      <!---->
    </div>
  </div>
  <div class=\\"relative w-2/5 p-3 md:w-1/5\\">
    <div class=\\"flex items-center justify-around gap-x-4\\">
      <div class=\\"flex flex-col items-center\\">
        <div class=\\"text-2xl font-medium text-vanilla-400 v-popper--has-tooltip\\">
          0
        </div>
        <div class=\\"text-xs text-vanilla-400\\">introduced</div>
      </div>
      <div class=\\"flex flex-col items-center\\">
        <div class=\\"text-2xl font-medium text-vanilla-400 v-popper--has-tooltip\\">
          0
        </div>
        <div class=\\"text-xs text-vanilla-400\\">resolved</div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`[[ AnalyzerHeader ]] renders \`AnalyzerHeader\` with all prop options: {"title":"Python","icon":"python","finishedInDisplay":"41 seconds","status":"PASS"} 1`] = `
"<div class=\\"flex min-h-24 w-full flex-1 rounded-sm\\">
  <div class=\\"flex w-3/5 flex-col gap-y-3 py-4 md:w-4/5 md:gap-y-2\\">
    <div class=\\"flex items-center space-x-2 text-xs font-normal text-vanilla-400 lg:text-lg lg:leading-9\\">
      <zicon-stub icon=\\"python\\" size=\\"small\\" color=\\"transparent\\"></zicon-stub> <span class=\\"text-base font-bold text-vanilla-100\\">Python</span>
    </div>
    <div class=\\"space-x-6 sm:flex\\">
      <div class=\\"flex items-start space-x-2\\">
        <zicon-stub icon=\\"check\\" size=\\"small\\" color=\\"juniper\\" class=\\"mt-0.5\\"></zicon-stub>
        <div class=\\"text-sm text-vanilla-400\\"><span> Passed in 41 seconds </span></div>
      </div>
      <!---->
    </div>
  </div>
  <div class=\\"relative w-2/5 p-3 md:w-1/5\\">
    <div class=\\"flex items-center justify-around gap-x-4\\">
      <div class=\\"flex flex-col items-center\\">
        <div class=\\"text-2xl font-medium text-vanilla-400 v-popper--has-tooltip\\">
          0
        </div>
        <div class=\\"text-xs text-vanilla-400\\">introduced</div>
      </div>
      <div class=\\"flex flex-col items-center\\">
        <div class=\\"text-2xl font-medium text-vanilla-400 v-popper--has-tooltip\\">
          0
        </div>
        <div class=\\"text-xs text-vanilla-400\\">resolved</div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`[[ AnalyzerHeader ]] renders \`AnalyzerHeader\` with all prop options: {"title":"Python","icon":"python","finishedInDisplay":"41 seconds","status":"PEND"} 1`] = `
"<div class=\\"flex min-h-24 w-full flex-1 rounded-sm\\">
  <div class=\\"flex w-3/5 flex-col gap-y-3 py-4 md:w-4/5 md:gap-y-2\\">
    <div class=\\"flex items-center space-x-2 text-xs font-normal text-vanilla-400 lg:text-lg lg:leading-9\\">
      <zicon-stub icon=\\"python\\" size=\\"small\\" color=\\"transparent\\"></zicon-stub> <span class=\\"text-base font-bold text-vanilla-100\\">Python</span>
    </div>
    <div class=\\"space-x-6 sm:flex\\">
      <div class=\\"flex items-start space-x-2\\">
        <zicon-stub icon=\\"spin-loader\\" size=\\"small\\" color=\\"vanilla-100\\" class=\\"mt-0.5\\"></zicon-stub>
        <div class=\\"text-sm text-vanilla-400\\"><span> Analysis in progress (Time elapsed: 41 seconds) </span></div>
      </div>
      <!---->
    </div>
  </div>
  <!---->
</div>"
`;

exports[`[[ AnalyzerHeader ]] renders \`AnalyzerHeader\` with all prop options: {"title":"Python","icon":"python","finishedInDisplay":"41 seconds","status":"READ"} 1`] = `
"<div class=\\"flex min-h-24 w-full flex-1 rounded-sm\\">
  <div class=\\"flex w-3/5 flex-col gap-y-3 py-4 md:w-4/5 md:gap-y-2\\">
    <div class=\\"flex items-center space-x-2 text-xs font-normal text-vanilla-400 lg:text-lg lg:leading-9\\">
      <zicon-stub icon=\\"python\\" size=\\"small\\" color=\\"transparent\\"></zicon-stub> <span class=\\"text-base font-bold text-vanilla-100\\">Python</span>
    </div>
    <div class=\\"space-x-6 sm:flex\\">
      <div class=\\"flex items-start space-x-2\\">
        <zicon-stub icon=\\"circle-dot\\" size=\\"small\\" color=\\"vanilla-400\\" class=\\"mt-0.5\\"></zicon-stub>
        <div class=\\"text-sm text-vanilla-400\\"><span> Completed in 41 seconds </span></div>
      </div>
      <!---->
    </div>
  </div>
  <div class=\\"relative w-2/5 p-3 md:w-1/5\\">
    <div class=\\"flex items-center justify-around gap-x-4\\">
      <div class=\\"flex flex-col items-center\\">
        <div class=\\"text-2xl font-medium text-vanilla-400 v-popper--has-tooltip\\">
          0
        </div>
        <div class=\\"text-xs text-vanilla-400\\">introduced</div>
      </div>
      <div class=\\"flex flex-col items-center\\">
        <div class=\\"text-2xl font-medium text-vanilla-400 v-popper--has-tooltip\\">
          0
        </div>
        <div class=\\"text-xs text-vanilla-400\\">resolved</div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`[[ AnalyzerHeader ]] renders \`AnalyzerHeader\` with all prop options: {"title":"Python","icon":"python","finishedInDisplay":"41 seconds","status":"TIMO"} 1`] = `
"<div class=\\"flex min-h-24 w-full flex-1 rounded-sm\\">
  <div class=\\"flex w-3/5 flex-col gap-y-3 py-4 md:w-4/5 md:gap-y-2\\">
    <div class=\\"flex items-center space-x-2 text-xs font-normal text-vanilla-400 lg:text-lg lg:leading-9\\">
      <zicon-stub icon=\\"python\\" size=\\"small\\" color=\\"transparent\\"></zicon-stub> <span class=\\"text-base font-bold text-vanilla-100\\">Python</span>
    </div>
    <div class=\\"space-x-6 sm:flex\\">
      <div class=\\"flex items-start space-x-2\\">
        <zicon-stub icon=\\"timer\\" size=\\"small\\" color=\\"honey\\" class=\\"mt-0.5\\"></zicon-stub>
        <div class=\\"text-sm text-vanilla-400\\"><span> Timed out after 41 seconds </span></div>
      </div>
      <!---->
    </div>
  </div>
  <div class=\\"relative w-2/5 p-3 md:w-1/5\\">
    <div class=\\"flex items-center justify-around gap-x-4\\">
      <div class=\\"flex flex-col items-center\\">
        <div class=\\"text-2xl font-medium text-vanilla-400 v-popper--has-tooltip\\">
          0
        </div>
        <div class=\\"text-xs text-vanilla-400\\">introduced</div>
      </div>
      <div class=\\"flex flex-col items-center\\">
        <div class=\\"text-2xl font-medium text-vanilla-400 v-popper--has-tooltip\\">
          0
        </div>
        <div class=\\"text-xs text-vanilla-400\\">resolved</div>
      </div>
    </div>
  </div>
</div>"
`;
